@@ -36,8 +36,10 @@ This was written as a successor to [Pod::Readme](https://metacpan.org/pod/Pod%3A
 
 # RECENT CHANGES
 
-Changes for version v0.5.2 (2025-08-18)
+Changes for version v0.5.2 (2025-08-19)
 
+- Enhancements
+    - The STATUS and SECURITY CONSIDERATIONS sections are included by default.
 - Tests
     - Add more author tests.
 
