@@ -1,6 +1,9 @@
 Release history for {{ $dist->name }}:
 
 {{$NEXT}}
+  [Enhancements]
+  - The STATUS and SECURITY CONSIDERATIONS sections are included by default.
+
   [Tests]
   - Add more author tests.
 
